--- a/EmailAlertUsingToken/Web.config
+++ b/EmailAlertUsingToken/Web.config
@@ -9,7 +9,7 @@
 
     <add key="SMTP_Port" value="587" />
     <add key="ServerIPAdress" value="smtp.office365.com" />
-    <add key="SenderMailID" value="cms@gmail.com" />
+    <add key="SenderMailID" value="test@gmail.com" />
     <add key="SenderMailPassword" value="flbsdmfrwmzslqgw" />
     <!-- Azure AD App Registration -->
     <add key="TenantId" value="9b9a8f56-f5bf-4f92-8834-a10ce00d496d" />
